Java-8 compatibility fix